--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
   <body>
     <main>
       <section class="hero u-center-text">
-        <img
-          src="./images/logo.svg "
-          alt=""
-          class="hero__img u-margin-bottom-small"
-        />
-        <h1 class="heading-primary u-margin-bottom-small">
+        <img src="./images/logo.svg " alt="" class="hero__img" />
+        <h1 class="heading u-margin-bottom-small">
           A history of everything you copy
         </h1>
         <p class="paragraph u-margin-bottom-small">
@@ -45,7 +41,7 @@
       </section>
 
       <section class="section-value u-center-text u-margin-bottom-medium">
-        <h2 class="heading-primary u-margin-bottom-small">
+        <h2 class="heading heading--secondary u-margin-bottom-small">
           Keep track of your snippets
         </h2>
         <p class="paragraph u-margin-bottom-small">
@@ -66,20 +62,24 @@
           </div>
           <div class="col-1-of-2">
             <div class="feature__feature-box">
-              <h3 class="heading-primary u-margin-bottom-tiny">Quick Search</h3>
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
+                Quick Search
+              </h3>
               <p class="paragraph paragraph--at-right u-margin-bottom-medium">
                 Easily search your snippets by content, category, web address,
                 application, and more.
               </p>
             </div>
             <div class="feature__feature-box">
-              <h3 class="heading-primary u-margin-bottom-tiny">iCloud Sync</h3>
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
+                iCloud Sync
+              </h3>
               <p class="paragraph paragraph--at-right u-margin-bottom-medium">
                 Instantly saves and syncs snippets across all your devices.
               </p>
             </div>
             <div class="feature__feature-box">
-              <h3 class="heading-primary u-margin-bottom-tiny">
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
                 Complete History
               </h3>
               <p class="paragraph paragraph--at-right u-margin-bottom-medium">
@@ -93,7 +93,7 @@
 
       <section class="section-access u-center-text">
         <div class="access__box u-margin-bottom-medium">
-          <h2 class="heading-primary u-margin-bottom-small">
+          <h2 class="heading heading--secondary u-margin-bottom-small">
             Access Clipboard anywhere
           </h2>
           <p class="paragraph">
@@ -106,7 +106,7 @@
 
       <section class="section-tools">
         <div class="tools__description u-margin-bottom-large">
-          <h2 class="heading-primary u-margin-bottom-small">
+          <h2 class="heading heading--secondary u-margin-bottom-small">
             Supercharge your workflow
           </h2>
           <p class="paragraph">
@@ -120,7 +120,7 @@
                 class="tools__item-img u-margin-bottom-small"
                 src="./images/icon-blacklist.svg"
               />
-              <h3 class="heading-primary u-margin-bottom-tiny">
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
                 Create blacklists
               </h3>
               <p class="paragraph paragraph--small u-margin-bottom-medium">
@@ -135,7 +135,7 @@
                 class="tools__item-img u-margin-bottom-small"
                 src="./images/icon-text.svg"
               />
-              <h3 class="heading-primary u-margin-bottom-tiny">
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
                 Plain text snippets
               </h3>
               <p class="paragraph paragraph--small u-margin-bottom-medium">
@@ -150,7 +150,7 @@
                 class="tools__item-img u-margin-bottom-small"
                 src="./images/icon-preview.svg"
               />
-              <h3 class="heading-primary u-margin-bottom-tiny">
+              <h3 class="heading heading--tertiary u-margin-bottom-tiny">
                 Sneak preview
               </h3>
               <p class="paragraph paragraph--small u-margin-bottom-medium">
@@ -182,7 +182,7 @@
       </section>
 
       <section class="section-available u-center-text">
-        <h2 class="heading-primary u-margin-bottom-small">
+        <h2 class="heading heading--secondary u-margin-bottom-small">
           Clipboard for iOS and Mac OS
         </h2>
         <p class="paragraph u-margin-bottom-small">
@@ -225,21 +225,21 @@
           <div class="footer__social">
             <a href="" class="footer__social-link"
               ><img
-                src="/images/icon-facebook.svg"
+                src="./images/icon-facebook.svg"
                 alt=""
                 class="footer__social-img"
               />
             </a>
             <a href="" class="footer__social-link"
               ><img
-                src="/images/icon-twitter.svg"
+                src="./images/icon-twitter.svg"
                 alt=""
                 class="footer__social-img"
               />
             </a>
             <a href="" class="footer__social-link"
               ><img
-                src="/images/icon-instagram.svg"
+                src="./images/icon-instagram.svg"
                 alt=""
                 class="footer__social-img"
               />
