add schema test

--- a/index.html
+++ b/index.html
@@ -48,6 +48,28 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://falasol.github.io/clipboard-landing-page/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Product",
+            "item": "https://falasol.github.io/clipboard-landing-page/"
+          }
+        ]
+      }
+    </script>
+
     <main>
       <section class="hero u-center-text">
         <img src="./images/logo.svg " alt="" class="hero__img" />
